--- a/VanillaMoreMolds/assets/vanillamoremolds/lang/fr.json
+++ b/VanillaMoreMolds/assets/vanillamoremolds/lang/fr.json
@@ -1,7 +1,119 @@
-{
+﻿{
     //Natively translated by Zack.a.riz
     //Start log
     "start": "VanillaMoreMolds : Loaded",
     //Menu tab
     "game:tabname-VanillaMoreMolds": "Vanilla More Molds",
+    //Mold Sawblade brut
+    "block-toolmold-blue-raw-sawblade": "Moule de lame de scie en argile bleu brut",
+    "block-toolmold-red-raw-sawblade": "Moule de lame de scie en argile rouge brut",
+    "block-toolmold-fire-raw-sawblade": "Moule de lame de scie en argile réfractaire brut",
+    //Mold Sawblade cuit
+    "block-toolmold-cream-fired-sawblade": "Moule de lame de scie en céramique crème",
+    "block-toolmold-gray-fired-sawblade": "Moule de lame de scie en céramique grise",
+    "block-toolmold-black-fired-sawblade": "Moule de lame de scie en céramique noire",
+    "block-toolmold-tan-fired-sawblade": "Moule de lame de scie en céramique ocre",
+    "block-toolmold-orange-fired-sawblade": "Moule de lame de scie en céramique orange",
+    "block-toolmold-red-fired-sawblade": "Moule de lame de scie en céramique rouge",
+    "block-toolmold-brown-fired-sawblade": "Moule de lame de scie en céramique brune",
+    "block-toolmold-fire-fired-sawblade": "Moule de lame de scie en céramique réfractaire",
+    "block-toolmold-blue-fired-sawblade": "Moule de lame de scie en céramique brun foncé",
+    //Mold nail brut
+    "block-toolmold-blue-raw-nail": "Moule de clous et bandes en argile bleu brut",
+    "block-toolmold-red-raw-nail": "Moule de clous et bandes en argile rouge brut",
+    "block-toolmold-fire-raw-nail": "Moule de clous et bandes en argile réfractaire brut",
+    //Mold nail cuit
+    "block-toolmold-cream-fired-nail": "Moule de clous et bandes en céramique crème",
+    "block-toolmold-gray-fired-nail": "Moule de clous et bandes en céramique grise",
+    "block-toolmold-black-fired-nail": "Moule de clous et bandes en céramique noire",
+    "block-toolmold-tan-fired-nail": "Moule de clous et bandes en céramique ocre",
+    "block-toolmold-orange-fired-nail": "Moule de clous et bandes en céramique orange",
+    "block-toolmold-red-fired-nail": "Moule de clous et bandes en céramique rouge",
+    "block-toolmold-brown-fired-nail": "Moule de clous et bandes en céramique brune",
+    "block-toolmold-fire-fired-nail": "Moule de clous et bandes en céramique réfractaire",
+    "block-toolmold-blue-fired-nail": "Moule de clous et bandes en céramique brun foncé",
+    //Mold arrowhead brut
+    "block-toolmold-blue-raw-arrowhead": "Moule de pointes de flèches en argile bleu brut",
+    "block-toolmold-red-raw-arrowhead": "Moule de pointes de flèches en argile rouge brut",
+    "block-toolmold-fire-raw-arrowhead": "Moule de pointes de flèches en argile réfractaire brut",
+    //Mold arrowhead cuit
+    "block-toolmold-cream-fired-arrowhead": "Moule de pointes de flèches en céramique crème",
+    "block-toolmold-gray-fired-arrowhead": "Moule de pointes de flèches en céramique grise",
+    "block-toolmold-black-fired-arrowhead": "Moule de pointes de flèches en céramique noire",
+    "block-toolmold-tan-fired-arrowhead": "Moule de pointes de flèches en céramique ocre",
+    "block-toolmold-orange-fired-arrowhead": "Moule de pointes de flèches en céramique orange",
+    "block-toolmold-red-fired-arrowhead": "Moule de pointes de flèches en céramique rouge",
+    "block-toolmold-brown-fired-arrowhead": "Moule de pointes de flèches en céramique brune",
+    "block-toolmold-fire-fired-arrowhead": "Moule de pointes de flèches en céramique réfractaire",
+    "block-toolmold-blue-fired-arrowhead": "Moule de pointes de flèches en céramique brun foncé",
+    //Mold hoop brut
+    "block-toolmold-blue-raw-hoop": "Moule de cerclage en argile bleu brut",
+    "block-toolmold-red-raw-hoop": "Moule de cerclage en argile rouge brut",
+    "block-toolmold-fire-raw-hoop": "Moule de cerclage en argile réfractaire brut",
+    //Mold hoop cuit
+    "block-toolmold-cream-fired-hoop": "Moule de cerclage en céramique crème",
+    "block-toolmold-gray-fired-hoop": "Moule de cerclage en céramique grise",
+    "block-toolmold-black-fired-hoop": "Moule de cerclage en céramique noire",
+    "block-toolmold-tan-fired-hoop": "Moule de cerclage en céramique ocre",
+    "block-toolmold-orange-fired-hoop": "Moule de cerclage en céramique orange",
+    "block-toolmold-red-fired-hoop": "Moule de cerclage en céramique rouge",
+    "block-toolmold-brown-fired-hoop": "Moule de cerclage en céramique brune",
+    "block-toolmold-fire-fired-hoop": "Moule de cerclage en céramique réfractaire",
+    "block-toolmold-blue-fired-hoop": "Moule de cerclage en céramique brun foncé",
+    //Mold plate brut
+    "block-toolmold-blue-raw-plate": "Moule de plaque en argile bleu brut",
+    "block-toolmold-red-raw-plate": "Moule de plaque en argile rouge brut",
+    "block-toolmold-fire-raw-plate": "Moule de plaque en argile réfractaire brut",
+    //Mold plate cuit
+    "block-toolmold-cream-fired-plate": "Moule de plaque en céramique crème",
+    "block-toolmold-gray-fired-plate": "Moule de plaque en céramique grise",
+    "block-toolmold-black-fired-plate": "Moule de plaque en céramique noire",
+    "block-toolmold-tan-fired-plate": "Moule de plaque en céramique ocre",
+    "block-toolmold-orange-fired-plate": "Moule de plaque en céramique orange",
+    "block-toolmold-red-fired-plate": "Moule de plaque en céramique rouge",
+    "block-toolmold-brown-fired-plate": "Moule de plaque en céramique brune",
+    "block-toolmold-fire-fired-plate": "Moule de plaque en céramique réfractaire",
+    "block-toolmold-blue-fired-plate": "Moule de plaque en céramique brun foncé",
+    //Mold spearhead brut
+    "block-toolmold-blue-raw-spearhead": "Moule de pointe de lance en argile bleu brut",
+    "block-toolmold-red-raw-spearhead": "Moule de pointe de lance en argile rouge brut",
+    "block-toolmold-fire-raw-spearhead": "Moule de pointe de lance en argile réfractaire brut",
+    //Mold spearhead cuit
+    "block-toolmold-cream-fired-spearhead": "Moule de pointe de lance en céramique crème",
+    "block-toolmold-gray-fired-spearhead": "Moule de pointe de lance en céramique grise",
+    "block-toolmold-black-fired-spearhead": "Moule de pointe de lance en céramique noire",
+    "block-toolmold-tan-fired-spearhead": "Moule de pointe de lance en céramique ocre",
+    "block-toolmold-orange-fired-spearhead": "Moule de pointe de lance en céramique orange",
+    "block-toolmold-red-fired-spearhead": "Moule de pointe de lance en céramique rouge",
+    "block-toolmold-brown-fired-spearhead": "Moule de pointe de lance en céramique brune",
+    "block-toolmold-fire-fired-spearhead": "Moule de pointe de lance en céramique réfractaire",
+    "block-toolmold-blue-fired-spearhead": "Moule de pointe de lance en céramique brun foncé",
+    //Mold knifeblade brut
+    "block-toolmold-blue-raw-knifeblade": "Moule de lame de couteau en argile bleu brut",
+    "block-toolmold-red-raw-knifeblade": "Moule de lame de couteau en argile rouge brut",
+    "block-toolmold-fire-raw-knifeblade": "Moule de lame de couteau en argile réfractaire brut",
+    //Mold knifeblade cuit
+    "block-toolmold-cream-fired-knifeblade": "Moule de lame de couteau en céramique crème",
+    "block-toolmold-gray-fired-knifeblade": "Moule de lame de couteau en céramique grise",
+    "block-toolmold-black-fired-knifeblade": "Moule de lame de couteau en céramique noire",
+    "block-toolmold-tan-fired-knifeblade": "Moule de lame de couteau en céramique ocre",
+    "block-toolmold-orange-fired-knifeblade": "Moule de lame de couteau en céramique orange",
+    "block-toolmold-red-fired-knifeblade": "Moule de lame de couteau en céramique rouge",
+    "block-toolmold-brown-fired-knifeblade": "Moule de lame de couteau en céramique brune",
+    "block-toolmold-fire-fired-knifeblade": "Moule de lame de couteau en céramique réfractaire",
+    "block-toolmold-blue-fired-knifeblade": "Moule de lame de couteau en céramique brun foncé",
+    //Mold scytheblade brut
+    "block-toolmold-blue-raw-scythehead": "Moule de lame de faux en argile bleu brut",
+    "block-toolmold-red-raw-scythehead": "Moule de lame de faux en argile rouge brut",
+    "block-toolmold-fire-raw-scythehead": "Moule de lame de faux en argile réfractaire brut",
+    //Mold scytheblade cuit
+    "block-toolmold-cream-fired-scythehead": "Moule de lame de faux en céramique crème",
+    "block-toolmold-gray-fired-scythehead": "Moule de lame de faux en céramique grise",
+    "block-toolmold-black-fired-scythehead": "Moule de lame de faux en céramique noire",
+    "block-toolmold-tan-fired-scythehead": "Moule de lame de faux en céramique ocre",
+    "block-toolmold-orange-fired-scythehead": "Moule de lame de faux en céramique orange",
+    "block-toolmold-red-fired-scythehead": "Moule de lame de faux en céramique rouge",
+    "block-toolmold-brown-fired-scythehead": "Moule de lame de faux en céramique brune",
+    "block-toolmold-fire-fired-scythehead": "Moule de lame de faux en céramique réfractaire",
+    "block-toolmold-blue-fired-scythehead": "Moule de lame de faux en céramique brun foncé",
 }
